Fix timer not visible error blocking page interaction

--- a/www/styles.css
+++ b/www/styles.css
@@ -303,6 +303,7 @@ details {
     flex-flow: row nowrap;
     justify-content: center;
     align-items: center;
+    position: relative;
     container-type: inline-size;
     container-name: bigTimer;
 }
